--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-## Welcome to GitHub Pages
+## Team Members
 
-You can use the [editor on GitHub](https://github.com/djmajor97/djmajor.github.io/edit/master/index.md) to maintain and preview the content for your website in Markdown files.
+David Major (djmajor@)
+Michael Stambler (mas16@)
+Uri Schwartz (uris@)
+TA: Jerry Wei
 
 Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
 
