--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 ## Welcome to GitHub Pages
 
-David Major (djmajor@)
-Michael Stambler (mas16@)
-Uri Schwartz (uris@)
-TA: Jerry Wei
+You can use the [editor on GitHub](https://github.com/djmajor97/djmajor.github.io/edit/master/index.md) to maintain and preview the content for your website in Markdown files.
 
 Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
 
