--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="http://www.cs.princeton.edu/courses/archive/spring17/cos333/333.css">
-<title> Your project name </title>
+<title> Princeton Club Talk </title>
 
 <body bgcolor="ffffff">
 
